--- a/frontend/documentation.html
+++ b/frontend/documentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentação Técnica - Security Scanner</title>
+    <title>Documentação Técnica - Ades Plataform</title>
     <link rel="stylesheet" href="css/manual.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <div class="logo-section">
                     <i class="fas fa-shield-alt"></i>
-                    <h1>Security Scanner</h1>
+                    <h1>Ades Plataform</h1>
                 </div>
                 <div style="display: flex; gap: 15px;">
                     <a href="manual.html" class="btn-back">
@@ -63,7 +63,7 @@
                 
                 <div class="content-card">
                     <h3>Bem-vindo à Documentação da API</h3>
-                    <p>A Security Scanner API permite que você integre nossas ferramentas de segurança em suas aplicações, automatize testes e crie workflows personalizados.</p>
+                    <p>A Ades Plataform API permite que você integre nossas ferramentas de segurança em suas aplicações, automatize testes e crie workflows personalizados.</p>
                     
                     <h4>Requisitos</h4>
                     <ul class="feature-list">
@@ -306,7 +306,7 @@ Content-Type: application/json
 
                 <div class="content-card">
                     <h3>Integração com CI/CD</h3>
-                    <p>Integre o Security Scanner em seu pipeline de CI/CD para testes automatizados de segurança.</p>
+                    <p>Integre o Ades Plataform em seu pipeline de CI/CD para testes automatizados de segurança.</p>
 
                     <h4>GitHub Actions</h4>
                     <pre><code class="language-yaml">name: Security Scan
@@ -621,7 +621,7 @@ X-RateLimit-Reset: 1638705600</code></pre>
     <!-- Footer -->
     <footer class="manual-footer">
         <div class="container">
-            <p>&copy; 2025 Security Scanner. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Ades Plataform. Todos os direitos reservados.</p>
             <p>API v1.0.0 | Documentação atualizada em 05/12/2025</p>
         </div>
     </footer>
